# ai_advance_trade_engine

./: .env  Cargo.toml  Dockerfile  README.md  ecosystem.config.cjs
aidynamics-trade/: Cargo.toml
aidynamics-trade-derive/: Cargo.toml
aidynamics-trade-derive/src/: lib.rs
aidynamics-trade-utils/: Cargo.toml
aidynamics-trade-utils/src/: lib.rs
aidynamics-trade-utils/src/http/: client.rs  end_point.rs  header copy.rs  header.rs
aidynamics-trade-utils/src/ws/: ws_stream.rs
aidynamics-trade/examples/: all_holdings.rs  cancel_order.rs  candle_data.rs  channels.rs  holdings.rs  individual_order_status.rs  instruments.rs  ltp_data.rs  margin_calculator.rs  market_data.rs  order_book.rs  place_order.rs  redis.rs  redis_consumer.rs  redis_stream.rs  redis_stream_producer.rs  rms.rs  search_scrip.rs  testo.rs  ws.rs
aidynamics-trade/src/: advanced_trade_engine_processor.rs  firebase_utils.rs  lib.rs  main channel_inque.rs  main copy 2.rs  main copy.rs  main.rs  main_managed_by_ws.rs  main_original.rs  main_testing_ws.rs  main_ws_implemented.rs  main_ws_subs_client.rs  order_processor copy.rs  order_processor.rs  redis_stream_producer.rs  redis_utils.rs  smart_connect.rs  trade_engine_processor.rs  trade_engine_processor_with_vec.rs
aidynamics-trade/src/api/funds/: margin_calculator.rs  rms.rs
aidynamics-trade/src/api/gtt/: cancel_rule.rs  create_rule.rs  modify_rule.rs  rule_detail.rs  rule_list.rs
aidynamics-trade/src/api/market/: candle_data.rs  instrument.rs  ltp_data.rs  market_data.rs  mod.rs  search_scrip.rs
aidynamics-trade/src/api/order/: cancel_order.rs  individual_order_status.rs  modify_order.rs  order_book.rs  place_order.rs  trade_book.rs
aidynamics-trade/src/api/order/order_inner/: order_inner.rs  order_setter.rs
aidynamics-trade/src/api/portfolio/: all_holdings.rs  holding.rs  position.rs
aidynamics-trade/src/api/user/: profile.rs  session.rs
aidynamics-trade/src/api/ws/: ws.rs
aidynamics-trade/src/api/ws/message/: best_five_data.rs  message.rs  quote.rs  snap_quote.rs
aidynamics-trade/src/api/ws/subscription/: builder.rs  param.rs  token.rs
aidynamics-trade/src/api/ws/subscription/types/: action.rs  exchange.rs  mode.rs
aidynamics-trade/src/client_utils/: client_node copy.rs  client_node.rs  mod.rs  trade_engine.rs  trade_engine_impl_ws.rs  trade_handler.rs
aidynamics-trade/src/server_utils/: api.rs  client.rs  end_points.rs  header.rs  mod.rs  response.rs  server_http.rs
aidynamics-trade/src/types/: duration_type.rs  order_type.rs  order_variety.rs  transaction_type.rs
aidynamics-trade/src/websocket/: angel_one_websocket.rs  angel_one_websocket_impl_ws.rs  check_status.rs  mod.rs  websocket_client.rs
firebase-rs/: Cargo.toml
firebase-rs/src/: sse.rs
