[package]
name = "aidynamics-trade"
version = "0.2.0"
edition = "2021"
authors = ["DeepTech Capital Management <research@dtcm.ai>"]
categories = ["finance", "algorithm", "algorithmic trading", "algotrade"]
description = "Angel One SDK"
documentation = "https://github.com/dtcm-ai/aidynamics-trade"
homepage = "https://www.dtcm.ai"
keywords = ["angelone", "algotrading", "trading", "stocks", "investment", "api"]
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.serde]
# version = "1"
# features = ["derive"]

# [dependencies.chrono]
# version = "0.4"

# [dependencies.byteorder]
# version = "1"

# [dependencies.serde_repr]
# version = "0.1"

# [dependencies.aidynamics-trade-utils]
# path = "../aidynamics-trade-utils"

# [dependencies.aidynamics-trade-derive]
# path = "../aidynamics-trade-derive"

# [dev-dependencies.tokio]
# version = "1"
# features = ["macros", "rt-multi-thread"]

# [dev-dependencies.tokio-stream]
# version = "0.1"

# [dev-dependencies.dotenv]
# version = "0.15"

# [dev-dependencies.env_logger]
# # version = "0.10"
# version = "0.11.3"


# [dev-dependencies.serde_json]
# version = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
byteorder = "1"
serde_repr = "0.1"
aidynamics-trade-utils = { path = "../aidynamics-trade-utils" }
aidynamics-trade-derive = { path = "../aidynamics-trade-derive" }
firebase-rs = { path = "../firebase-rs" }
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio = { version = "1.38.0", features = ["full"] }

tokio-stream = "0.1"
dotenv = "0.15"
env_logger = "0.11.3"
serde_json = {version = "1.0.1",features = ["alloc"]}
rand = "0.8"
tokio-tungstenite = {version = "0.23.1", features = ["native-tls"]}
futures = "0.3.30"
url = "2.5.2"
futures-util = "0.3.30"
reqwest = {version = "0.12.5", features = ["default","json"]}
redis = {version="0.25.0", features = ['tokio-comp','keep-alive','aio']}
redis-streams = "0.1.0" 
# redis = "*"
tracing = "0.1"
tracing-subscriber = "0.3"


[profile.release]
opt-level = 3